Stage details page - jobs alignment fix

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -2950,7 +2950,7 @@ button.edit-environment {
 }
 
 .content #tab_container div.jobs {
-  width: 215px;
+  width: 225px;
   .wrapped_word {
     font-size: 13px;
   }
